--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@heroui/react": "^2.7.11",
     "framer-motion": "^12.20.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
+    "react-router": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
